2006-10-24  Nathaniel Smith  <njs@pobox.com>

	* cmd_automate.cc (automate_reader): Use delete[] to free array
	allocated with new[].

2006-10-22  Matthew Nicholson  <matt@matt-land.com>

	* debian/monotone-server.postinst: Swap execution of 'set +e' and 'set
	-e'.

2006-10-15  Timothy Brownawell  <tbrownaw@gmail.com>

	Propagate the rerwite of 'automate stdio' (in branch
	...automate-stdio-extensions) to mainline. It doesn't actually
	have any extensions anymore, just a rewrite that should make
	the code cleaner.

2006-10-13  Timothy Brownawell  <tbrownaw@gmail.com>

	Revert automate stdio extensions (never were on mainline) so
	that the only change is that automate stdio is implemented
	more cleanly.

2006-10-12  Thomas Keller <me@thomaskeller.biz>

	* automate.cc: replaced std::endl in favour of simple unix
	unix line endings which is useful if these commands are used
	over automate stdio (flushing is expensive...)

2006-10-03  Evan Deaubl  <evan@warpedview.com>

	* monotone.cc, options_list.hh: Added ability to specify
	multiple --message arguments.
	* monotone.texi: Added documentation for multiple --message
	arguments.
	* tests/multiple_message_commit/__driver__.lua, testsuite.lua:
	Added integration test for multiple --message arguments.
	
2006-10-09  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 35 fuzzies cleared,

2006-10-08  Richard Levitte  <richard@levitte.org>

	* debian/control (monotone-doc): Set up build dependencies for the
	tools needed to make the documentation.

2006-10-08  Richard Levitte  <richard@levitte.org>

	* debian/control (monotone-doc): New package that contains all
	the documentation.
	* debian/rules (binary-install/monotone-server): Add special rule
	so the PDF document really gets created.
	* debian/monotone.docs: Move the documentation referenses from
	here ...
	* debian/monotone-doc.docs: ... to here, since we have a separate
	package for documentation.

2006-10-04  Timothy Brownawell  <tbrownaw@gmail.com>
